# Finder

./: Cargo.toml  Update Log.txt  build.rs
src/: cli_main.rs  lib.rs  main.rs  ui_main.rs
ui/: main.slint
