[package]
name = "finder"
version = "0.2.0"
edition = "2024"
authors = ["Yk"]
description = "A fuzzy finder to search specific files in a directory"
repository = "https://github.com/Yekong995/Finder"
build = "build.rs"

[dependencies]
clipboard-rs = "0.2.4"
fuzzy-matcher = "0.3.7"
walkdir = "2.5.0"
crossterm = { version = "0.28.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
rfd = { version = "0.15.4", optional = true }
slint = { version = "1.13.1", optional = true }

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt", "rt-multi-thread", "sync", "time"]
optional = true

[build-dependencies]
slint-build = { version = "1.13.1", optional = true }

[features]
default = []
cli = ["tokio", "ratatui", "crossterm"]
ui = ["slint", "rfd", "slint-build"]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 16
panic = "abort"
